--- a/miniprogram/pages/fans/fans.wxml
+++ b/miniprogram/pages/fans/fans.wxml
@@ -12,13 +12,10 @@
 						<view class="followedUserFollowNum"><text>关注数: {{item.fans.length}}</text></view>
 
 					</view>
-          <view wx:if="{{!fansFlag[index]}}" class="followUserButton" bindtap="addFocus" data-openid="{{item.openid}}" data-index="{{index}}" hover-class="followUserButton-hover" hover-stay-time="100">
-						<view class="followUserButtonImage">
-							<image class="followUserButtonIcon" src="../../image/follow.png"></image>
-						</view>
+          <view wx:if="{{!fansFlag[index]}}" class="followUserButton" bindtap="addFocus" data-openid="{{item.openid}}" data-index="{{index}}">
 						<view class="followUserButtonText"><text>关注</text></view>
 					</view>
-					<view wx:else class="followUserButtonDone" bindtap="deleteFocus" data-openid="{{item.openid}}" data-index="{{index}}" hover-class="followUserButton-hover" hover-stay-time="100">
+					<view wx:else class="followUserButtonDone" bindtap="deleteFocus" data-openid="{{item.openid}}" data-index="{{index}}">
 						<view class="followUserButtonTextDone"><text>取消关注</text></view>
 					</view>
 				</view>
