--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -79,7 +79,8 @@
 }
 
 .pictureCom{
-	width: 660rpx;
+  width: 660rpx;
+  height: 400rpx;
 	margin: 30rpx auto;
   border: solid 2rpx;
   border-radius: 20rpx;
@@ -112,7 +113,9 @@
 .name{
   width: 170rpx;
 	height: 55rpx;
-  margin: 120rpx 0rpx 0rpx 30rpx;
+  margin-top: 250rpx;
+  margin-left: 30rpx;
+  color: grey;
 }
 
 .authorSet{
@@ -121,13 +124,12 @@
 }
 
 .goodsNum{
-  width: 300rpx;
+  width: 350rpx;
   height: 30rpx;
   margin-left:30rpx;
-  margin-bottom: 10rpx;
+  margin-bottom: 20rpx;
   font-size: small;
   color: #696767;
-  /* margin: 0rpx 30rpx 30rpx 0rpx; */
 }
 
 .authorSetIcon{
