--- a/miniprogram/pages/notice/notice.wxml
+++ b/miniprogram/pages/notice/notice.wxml
@@ -1,2 +1,43 @@
-<!--miniprogram/pages/notice/notice.wxml-->
-<text>miniprogram/pages/notice/notice.wxml</text>
+<view style="text-align: center"><text style="font-size: 50rpx; font-weight: bold">免责声明</text></view>
+<view style="margin-top: 20rpx">
+  <text style="font-size: 40rpx; font-weight: bold">1.总则</text>
+  <view style="margin-left: 1em; margin-top: 10rpx">1.1 注册用户同意本协议的全部条款并完成注册程序，才能成为本系统的正式用户。请您仔细阅读本协议，您点击"同意"按钮后即表示完全接受本协议项下的全部条款。</view>
+  <view style="margin-left: 1em; margin-top: 10rpx">1.2 用户一旦注册，即视为用户确认自己具有享受本站服务的权利能力和行为能力，能够独立承担法律责任。</view>
+  <view style="margin-left: 1em; margin-top: 10rpx">1.3 在注册和使用本系统时，用户应了解相关法律法规，确知享有的权利和义务；应保证注册时提交的信息合法、真实、准确，并取得相应授权。</view>
+</view>
+
+<view style="margin-top: 20rpx"></view>
+  <text style="font-size: 40rpx; font-weight: bold">2.用户</text>
+  <view style="margin-left: 1em; margin-top: 10rpx">2.1 注册用户向本系统提供的注册资料应当是真实、准确、完整、合法有效的，用户注册资料如有变动的，应及时更新。如用户提供的注册资料不合法、不真实、不准确、不详尽的，用户需承担因此引起的相应责任及后果。</view>
+  <view style="margin-left: 1em; margin-top: 10rpx">2.2 用户注册成功后，将产生用户名和密码等账户信息。用户可以根据本系统规定变更密码。用户应谨慎合理的保存、使用其用户名和密码。用户若发现任何非法使用用户账号或存在安全漏洞的情况，请立即通知我们。</view>
+  <view style="margin-left: 1em; margin-top: 10rpx">2.3 用户应当对以其用户名登录进行的所有活动和事件负法律责任。用户不得将在本系统注册获得的账户转让、出售或出借给他人使用，否则用户应承担由此产生的全部责任，并与实际使用人承担连带责任。</view>
+  <view style="margin-left: 1em; margin-top: 10rpx">2.4 用户同意，本系统拥有通过电子邮件、短信电话等形式，向注册用户和相关申请人发送和告知相关审核信息与结果的权利。该等通知于发送之日视为已送达收件人。</view>
+
+<view style="margin-top: 20rpx">
+  <text style="font-size: 40rpx; font-weight: bold">3.服务</text>
+  <view style="margin-left: 1em; margin-top: 10rpx">3.1 如发生下列任何一种情形，本系统有权随时中断或终止向用户提供本协议项下的服务而无需对用户或任何第三方承担任何责任： </view>
+  <view style="margin-left: 2em; margin-top: 5rpx">3.1.1 用户提供的个人资料不真实；</view>
+  <view style="margin-left: 2em; margin-top: 5rpx">3.1.2 用户违反本协议中规定的使用规则；</view>
+  <view style="margin-left: 2em; margin-top: 5rpx">3.1.3 用户名存在违反法律法规或国家政策要求，或侵犯任何第三方合法权益的情形；</view>
+</view>
+
+<view style="margin-top: 20rpx">
+  <text style="font-size: 40rpx; font-weight: bold">4.义务</text>
+  <view style="margin-left: 1em; margin-top: 10rpx">4.1 遵守中国有关的法律和法规；</view>
+  <view style="margin-left: 1em; margin-top: 10rpx">4.2 遵守所有与注册和服务有关的协议、规定和程序；</view>
+  <view style="margin-left: 1em; margin-top: 10rpx">4.3 不得为任何非法目的而使用网络服务系统；</view>
+  <view style="margin-left: 1em; margin-top: 10rpx">4.4 不得以任何形式在使用本系统过程中侵犯协会及第三方的专利权、著作权、商标权、名誉权或其他任何合法权益； </view>
+  <view style="margin-left: 1em; margin-top: 10rpx">4.5 不得利用本系统进行任何可能对互联网正常运转造成不利影响的行为；</view>
+  <view style="margin-left: 1em; margin-top: 10rpx">4.6 不得利用本系统提供的网络服务上传、展示或传播任何虚假的、骚扰性的、中伤他人的、辱骂性的、恐吓性的、庸俗淫秽的或其他任何非法的信息资料。 本系统保有删除各类不符合法律政策或不真实的信息内容而无须通知用户的权利。若用户未遵守以上规定的，本站有权作出独立判断并采取暂停或关闭用户账号、终止服务、追究法律责任等措施。</view>
+</view>
+
+<view style="margin-top: 20rpx">
+  <text style="font-size: 40rpx; font-weight: bold">5.隐私保护</text>
+  <view style="margin-left: 1em; margin-top: 10rpx">5.1 用户在使用本系统进行网上注册并享有服务的过程中，涉及用户真实姓名、通信地址、联系电话、电子邮箱等隐私信息的，本系统将严格予以保密。除非属于下述情形，本系统不会向外界披露用户隐私信息：</view>
+  <view style="margin-left: 2em; margin-top: 5rpx">5.1.1 事先获得用户的明确授权；</view>
+  <view style="margin-left: 2em; margin-top: 5rpx">5.1.2 根据有关的法律法规要求；</view>
+  <view style="margin-left: 2em; margin-top: 5rpx">5.1.3 按照相关政府主管部门的要求；</view>
+  <view style="margin-left: 2em; margin-top: 5rpx">5.1.4 为维护社会公众的利益；</view>
+</view>
+
+
