--- a/miniprogram/pages/recipeInfo/recipeInfo.wxml
+++ b/miniprogram/pages/recipeInfo/recipeInfo.wxml
@@ -39,6 +39,9 @@
 	</view>
 	<view class="CommentList">
 		<text style="margin-bottom: 40rpx">————评论————</text>
+		<view wx:if="{{commentList.length == 0}}">
+			还没有人评论，快来抢沙发吧！
+		</view>
 		<view>
 			<view class="CommentItem"  wx:for="{{commentList}}">
 				<view class="CommentUserInfoAndAgreeCount">
