--- a/miniprogram/pages/userList/userList.wxss
+++ b/miniprogram/pages/userList/userList.wxss
@@ -70,7 +70,7 @@
   height: 40rpx;
   text-align: left;
   margin-top: 15rpx;
-  margin-left: 30rpx;
+  margin-left: 10rpx;
   font-size: 30rpx;
   color: gray;
   display: -webkit-box ;
@@ -87,12 +87,6 @@
   text-align: left;
   margin-top: 15rpx;  
   font-size: 35rpx;
-  display: -webkit-box ;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  word-break: break-all;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp:1;
 }
 
 .favoritesItemAuthorIcon{
@@ -100,6 +94,7 @@
   margin-bottom:15rpx;
   width: 37rpx;
   height: 37rpx;
+  margin-left:30rpx;
 }
 
 .favoritesItemTime{
@@ -114,4 +109,14 @@
   font-size: large;
   color: rgb(47, 189, 158);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.butt{
+  color: rgb(72, 117, 199);
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.button1{
+  color: gold;
+  background-color: lightblue;
 }
