--- a/miniprogram/pages/userList/userList.wxml
+++ b/miniprogram/pages/userList/userList.wxml
@@ -87,13 +87,17 @@
       暂无餐厅
     </view>
     <view wx:else>
-      <view wx:for="{{userRestaurant}}" wx:for-item="item">
-        <navigator url="../restaurantInfo/restaurantInfo?openid={{item.openid}}&&_id={{item._id}}">
-        <view class="favoritesItem">
-          <image src="{{item.cover}}" mode="widthFix" class="favoritesItemImage"></image>
-          <text class="favoritesItemName">{{item.name}}</text>
+      <view class="wholeStyle">
+        <view class="favoritesList">
+          <view wx:for="{{userRestaurant}}" wx:for-item="item">
+            <navigator url="../restaurantInfo/restaurantInfo?openid={{item.openid}}&&_id={{item._id}}">
+            <view class="favoritesItem">
+              <image src="{{item.cover}}" mode="widthFix" class="favoritesItemImage"></image>
+              <text class="favoritesItemName">{{item.name}}</text>
+            </view>
+            </navigator>
+          </view>
         </view>
-        </navigator>
       </view>
     </view>
   </view> 
